--- a/revagenda-backend/src/main/resources/application.properties
+++ b/revagenda-backend/src/main/resources/application.properties
@@ -1,21 +1,12 @@
 spring.application.name=revagenda-backend
 server.port=8080
 #spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.url=jdbc:h2:file:./data/demo
-spring.datasource.username=sa
-spring.datasource.password=password
+#spring.datasource.url=jdbc:h2:file:./data/demo
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=password123
 spring.jpa.hibernate.ddl-auto=update
 # spring.datasource.driver-class-name=org.h2.Driver
 # spring.datasource.driverClassName=org.h2.Driver
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 # spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-#Security & Session Stuff
-# Session timeout. If a duration suffix is not specified, seconds are used.
-server.servlet.session.timeout=
-# Database schema initialization mode.
-spring.session.jdbc.initialize-schema=embedded 
-# Path to the SQL file to use to initialize the database schema.
-
-spring.session.jdbc.schema=classpath:org/springframework/session/jdbc/schema-@@platform@@.sql
-spring.session.jdbc.table-name=SPRING_SESSION # Name of the database table used to store sessions.
