--- a/revagenda-backend/src/main/resources/application.properties
+++ b/revagenda-backend/src/main/resources/application.properties
@@ -1,12 +1,26 @@
+# Server Settings
 spring.application.name=revagenda-backend
 server.port=8080
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.url=jdbc:h2:file:./data/demo
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=password123
+
+# Data Sources
 spring.jpa.hibernate.ddl-auto=update
-# spring.datasource.driver-class-name=org.h2.Driver
-# spring.datasource.driverClassName=org.h2.Driver
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# H2 with console
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.h2.console.web-allow-others=false
+
+# H2 in memory db
+spring.datasource.url=jdbc:h2:mem:testdb
+
+# H2 flat file db
+#spring.datasource.url=jdbc:h2:file:./data/demo
+
+# PostGreSQL
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=password123
